opam-version: "1.2"
maintainer: "Marek Kubica <marek@xivilization.net>"
author: "Marek Kubica <marek@xivilization.net>"
homepage: "https://github.com/Leonidas-from-XIV/nosetup"
doc: "https://leonidas-from-xiv.github.io/nosetup/api"
bug-reports: "https://github.com/Leonidas-from-XIV/nosetup/issues"
dev-repo: "https://github.com/Leonidas-from-XIV/nosetup.git"
depends: [
  "ocamlfind"
  "jbuilder" {build}
  "angstrom" {>= "0.7.0"}
  "containers"
]
build: ["jbuilder" "build" "-p" name "-j" jobs]
available: [ ocaml-version >= "4.03.0" ]
